<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left|top"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/avatar"
            android:src="@drawable/pictures" />

        <ImageView
            android:id="@+id/imageLang1"
            android:layout_width="fill_parent"
            android:layout_height="22dp"
            android:contentDescription="@string/langimga"
            android:src="@drawable/un" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#4046ff"
            tools:ignore="SelectableText"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#0cff1c"
            tools:ignore="SelectableText"
            android:paddingBottom="5dp" />

        <LinearLayout
            android:layout_width="218dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friendin"
                android:textColor="#3c41ff"
                android:textIsSelectable="false" />

            <ImageView
                android:id="@+id/social1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/social"
                android:src="@drawable/facebook"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/social2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/social"
                android:src="@drawable/facebook"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/social3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/social"
                android:src="@drawable/facebook"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>