<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BallonTransparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="start"
    android:orientation="vertical"
    tools:ignore="SelectableText">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/primaryphotodialog"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:src="@drawable/pictures"
                android:layout_marginRight="10dp" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/langlbl"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/statushere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/statuslbl"
                        android:layout_alignTop="@+id/statuslbl"
                        android:layout_toRightOf="@+id/statuslbl"
                        android:textColor="#d52bff"
                        android:layout_alignRight="@+id/linearLayout2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/countryhere"
                        android:textColor="#6942ff" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/imageuser"
                        android:scaleType="fitXY"
                        android:src="@drawable/pictures"
                        android:layout_marginRight="10dp" />

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/imageuser"
                        android:scaleType="fitXY"
                        android:src="@drawable/pictures"
                        android:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:contentDescription="@string/imageuser"
                        android:scaleType="fitXY"
                        android:src="@drawable/pictures"
                        android:layout_marginRight="10dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_toRightOf="@+id/byeBubble"
                android:text="@string/remove" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="IM"
                android:id="@+id/clickImButton" />

            <Button
                android:id="@+id/byeBubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_toRightOf="@+id/buttonim"
                android:text="@string/exitbubble" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/remove"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/socialbaloon1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/social"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/socialbaloon2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/social"
                    android:padding="5dp" />

                <ImageView
                    android:id="@+id/socialbaloon3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/social"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>